--- a/src/app.css
+++ b/src/app.css
@@ -1,21 +1,88 @@
 .app{
    height: 100vh;
    display: flex;
-   background-color: #020230;
    color: white; 
 }
 
 .main{
     width: 75%;
-    background: url("./assets/bg.jpg") center;
-
+    background: linear-gradient(to bottom, rgba(0,0,0,0), #020230 ), url("./assets/bg.jpg") center;
+    display: flex;
+    flex-direction: column;
 }
 
+.top{
+    height: 50%;
+    position: relative;
+}
+
+.timer{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    border: 5px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    font-weight: 700;
+    position: absolute;
+    bottom: 10px;
+    left: 80px;
+}
+
+.bottom{
+    height: 50%;
+}
+
+.soal{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    align-items:center;
+}
+
+.pertanyaan{
+    width: 80%;
+    background:linear-gradient(#100241, black);
+    border: 2px solid white;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 20px;
+}
+
+.jawabans{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.jawaban{
+    width: 40%;
+    padding: 10px;
+    text-align: center;
+    background: linear-gradient(#0e0124, #22074d);
+    border: 1px solid white;
+    border-radius: 15px;
+    font-size: 20px;
+    font-weight: 300;
+    margin: 0 10px 20px 10px;
+    cursor: pointer;
+}
+
+.jawaban:hover,
+.jawaban.active{
+    background: mediumblue;
+}
 .pyramid{
     display: flex;
     align-items: center;
     justify-content: center;
     width: 25%;
+    background-color: #020230;
 }
 
 .moneyList{
