--- a/src/app.css
+++ b/src/app.css
@@ -77,6 +77,48 @@
 .jawaban.active{
     background: mediumblue;
 }
+
+.jawaban.correct{
+    animation: correct 3s ease forwards;
+}
+
+@keyframes correct {
+    0%,
+    22%,
+    42% {
+        background: mediumblue;
+    }
+    20%,
+    40%,
+    60% {
+        background: linear-gradient(#0e0124, #22074d);
+    }
+    62%,
+    100%{
+        background: green;
+    }
+}
+
+.jawaban.wrong{
+    animation: wrong 3s ease forwards;
+}
+
+@keyframes wrong {
+    0%,
+    22%,
+    42% {
+        background: mediumblue;
+    }
+    20%,
+    40%,
+    60% {
+        background: linear-gradient(#0e0124, #22074d);
+    }
+    62%,
+    100%{
+        background: crimson;
+    }
+}
 .pyramid{
     display: flex;
     align-items: center;
